[package]
name = "define"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text-colorizer = "1"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
confy = "0.6.1"
substring = "1.4.5"
awedio = "0.3.1"
tempfile = "3.10.1"
